Remove parallel stuff from the configuration files and put a limit to the execution time of the simulation.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -26,14 +26,6 @@ seed-set = ${repetition}
 **.tcp.recordStats = false
 #**.tcp.nagleEnabled = false
 
-## Debug flags for printing messages to std::clog
-#**.simulationController.debugFlag = true
-#**.bitTorrentClient.debugFlag = true
-#**.clientController.debugFlag = true
-#**.swarmManager.debugFlag = true
-#**.swarmManager.subModulesDebugFlag = true
-#**.trackerApp.debugFlag = true
-
 ## The type of the bitTorrentApplication
 *.peer[*].typename = "Peer"
 
@@ -70,25 +62,7 @@ experiment-label = "Varying Number of Peers"
 measurement-label = "${p} Peers, ${seederPerc} Seeder proportion"
 #repeat = 10
 
-*.peer[0..24]**.partition-id = 0
-*.peer[25..49]**.partition-id = 1
-*.peer[50..74]**.partition-id = 2
-*.peer[75..99]**.partition-id = 3
-*.clientController**.partition-id = 3
-*.flatNetworkConfigurator**.partition-id = 3
-*.router**.partition-id = 3
-*.tracker**.partition-id = 3
-
-#*.peer[0..24]**.priority = 0
-#*.peer[25..49]**.priority = 1
-#*.peer[50..74]**.priority = 2
-#*.peer[75..99]**.priority = 3
-#*.clientController**.priority = 3
-#*.flatNetworkConfigurator**.priority = 3
-#*.router**.priority = 3
-#*.tracker**.priority = 3
-
-*.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='test1']")
+*.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='small']")
 *.numPeers = ${p=100..1000 step 100}
 *.clientController.seederPercentage = ${seederPerc=0.1, 0.5, 0.9}
 
@@ -121,14 +95,9 @@ BasicTopology.*.vector-recording = true
 ### Configure a network quick tests
 ###
 [Config Test]
+sim-time-limit=1h
 extends = Base
 description = "Experiment run with only a few peers to test if the simulation is working"
-
-*.peer[0..1]**.partition-id = 0
-*.peer[2..3]**.partition-id = 1
-*.peer[4]**.partition-id = 2
-*.clientController**.partition-id = 2
-**.partition-id = 3
 
 *.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='test_simple']")
 *.clientController.seederPercentage = 0.1
@@ -150,6 +119,13 @@ BasicTopology.*.scalar-recording = true
 #**.eth[*].**.scalar-recording = false
 #**.arp.**.vector-recording = false
 #**.arp.**.scalar-recording = false
+
+## Debug flags for printing messages to std::clog
+**.bitTorrentClient.debugFlag = true
+**.clientController.debugFlag = true
+**.swarmManager.debugFlag = true
+**.swarmManager.subModulesDebugFlag = true
+#**.trackerApp.debugFlag = true
 
 # disable all recordings that are not explicitly defined
 **.scalar-recording = false
