--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -4,3 +4,4 @@ ned-path = /home/pevangelista/Workspaces/workspace-omnetpp/inet-20111118/src:../
 #parallel-simulation = true
 #parsim-debug = false
 tkenv-image-path = ../images
+sim-time-limit = 1day
