Change the configuration files.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -64,7 +64,8 @@ measurement-label = "${p} Peers, ${seederPerc} Seeder proportion"
 
 *.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='small']")
 *.numPeers = ${p=100..1000 step 100}
-*.clientController.seederPercentage = ${seederPerc=0.1, 0.5, 0.9}
+*.clientController.seederPercentage = ${seederPerc=0.1, 0.2, 0.3}
+**.uploadLimiter.bytesSec = 128KiB
 
 
 ## Statistics
@@ -95,13 +96,19 @@ BasicTopology.*.vector-recording = true
 ### Configure a network quick tests
 ###
 [Config Test]
-sim-time-limit=1h
+sim-time-limit=10h
 extends = Base
 description = "Experiment run with only a few peers to test if the simulation is working"
 
+# 2.5MB content
 *.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='test_simple']")
 *.clientController.seederPercentage = 0.1
-*.numPeers = 5
+*.numPeers = ${peers=10,20,30}
+num-rngs = 3
+**.peer[*].bitTorrentApp.swarmManager.contentManager*.rng-0 = 0
+**.peer[*].bitTorrentApp.swarmManager.choker*.rng-0 = 1
+**.tracker.**.rng-0 = 2
+**.contentManager*.bytesSec = ${rate=10KiB, 20KiB, 30KiB}
 
 ## Statistics
 # enable recordings by module
