Make a different parameter test.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -10,7 +10,6 @@ include omnetpp.ini
 network = BasicTopology
 seed-set = ${repetition}
 
-
 ## Ethernet
 #**.mac[*].txQueueLimit = 100000
 
@@ -52,33 +51,7 @@ seed-set = ${repetition}
 #**.peer[*].eth.thruputMeterDL.maxInterval = 100ms
 
 
-###
-### Configure a network for studying variable seeder:leecher ratios
-###
-[Config SimpleTopology]
-extends = Base
-description = "Experiment run with different number of seeders and peers"
-experiment-label = "Varying Number of Peers"
-measurement-label = "${p} Peers, ${seederPerc} Seeder proportion"
-#repeat = 10
-
-*.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='small']")
-*.numPeers = ${p=100..1000 step 100}
-*.clientController.seederPercentage = ${seederPerc=0.1, 0.2, 0.3}
-**.uploadLimiter.bytesSec = 128KiB
-
-
 ## Statistics
-# enable recordings by module
-BasicTopology.clientController.*.vector-recording = true
-BasicTopology.*.scalar-recording = true
-BasicTopology.*.vector-recording = true
-**.bitTorrentClient.*.scalar-recording = true
-**.swarmManager.contentManager**.vector-recording = true
-
-#**.routerThruput.eth[*].queue.*.scalar-recording = true
-#**.routerThruput.eth[*].queue.*.vector-recording = true
-
 # The eth and arp modules also save statistics
 #**.eth.**.vector-recording = false
 #**.eth.**.scalar-recording = false
@@ -86,11 +59,35 @@ BasicTopology.*.vector-recording = true
 #**.eth[*].**.scalar-recording = false
 #**.arp.**.vector-recording = false
 #**.arp.**.scalar-recording = false
+# enable recordings by module
+*.clientController.*.vector-recording = true
+*.*.scalar-recording = true
+*.*.vector-recording = true
+**.bitTorrentClient.*.scalar-recording = true
+**.swarmManager.contentManager**.vector-recording = true
 
 # disable all recordings that are not explicitly defined
 **.scalar-recording = false
 **.vector-recording = false
 
+###
+### Configure a network for studying variable seeder:leecher ratios
+###
+[Config SimpleTopology]
+extends = Base
+description = "Experiment run with different number of seeders and peers"
+experiment-label = "Varying Number of Peers"
+#measurement-label = "${peers} Peers, ${seederPerc} Seeder proportion"
+measurement-label = "Rate ${rate}, File ${file}"
+#repeat = 10
+
+*.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='${file=small,medium,large}']")
+**.uploadLimiter.bytesSec = ${rate=64KiB, 128KiB,512KiB}
+constraint = ("$file" == "small" && "$rate" == "64KiB") ||\
+             ("$file" == "medium" && "$rate" == "128KiB") ||\
+             ("$file" == "large" && "$rate" == "512KiB")
+*.numPeers = ${peers=500}
+*.clientController.seederPercentage = ${seederPerc=0.3}
 
 ###
 ### Configure a network quick tests
@@ -102,39 +99,17 @@ description = "Experiment run with only a few peers to test if the simulation is
 
 # 2.5MB content
 *.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='test_simple']")
-*.clientController.seederPercentage = 0.1
-*.numPeers = ${peers=10,20,30}
+*.clientController.seederPercentage = 0.3
+*.numPeers = ${peers=5,50,500}
 num-rngs = 3
 **.peer[*].bitTorrentApp.swarmManager.contentManager*.rng-0 = 0
 **.peer[*].bitTorrentApp.swarmManager.choker*.rng-0 = 1
 **.tracker.**.rng-0 = 2
-**.contentManager*.bytesSec = ${rate=10KiB, 20KiB, 30KiB}
-
-## Statistics
-# enable recordings by module
-BasicTopology.*.vector-recording = true
-BasicTopology.*.scalar-recording = true
-**.bitTorrentApp.**.scalar-recording = true
-**.bitTorrentApp.**.vector-recording = true
-#**.routerThruput.eth[*].queue.*.scalar-recording = true
-#**.routerThruput.eth[*].queue.*.vector-recording = true
-
-# The eth and arp modules also save statistics
-#**.eth.**.vector-recording = false
-#**.eth.**.scalar-recording = false
-#**.eth[*].**.vector-recording = false
-#**.eth[*].**.scalar-recording = false
-#**.arp.**.vector-recording = false
-#**.arp.**.scalar-recording = false
+**.contentManager*.bytesSec = ${rate=10KiB, 100KiB, 1MiB}
 
 ## Debug flags for printing messages to std::clog
 **.bitTorrentClient.debugFlag = true
-**.clientController.debugFlag = true
-**.swarmManager.debugFlag = true
+#**.clientController.debugFlag = true
+#**.swarmManager.debugFlag = true
 **.swarmManager.subModulesDebugFlag = true
 #**.trackerApp.debugFlag = true
-
-# disable all recordings that are not explicitly defined
-**.scalar-recording = false
-**.vector-recording = false
-
