Correct the setting of the data rate parameters.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -39,11 +39,11 @@ seed-set = ${repetition}
 ## Parameters
 **.swarmManager.refreshInterval = 100s
 **.swarmManager.numWant = 20
-**.tcpApp[0].maxListSize = 50
-**.tcpApp[0].contents = xmldoc("../simulations/BTContents.xml", "contentList")
+**.tracker.tcpApp[0].maxListSize = 50
+**.tracker.tcpApp[0].contents = xmldoc("simulations/BTContents.xml", "contentList")
 
 # processing time configured with the histogram with 55 bins
-*.peer[*].bitTorrentApp.bitTorrentClient.processingTimeHistogram = "../simulations/hist_55bin.dat"
+*.peer[*].bitTorrentApp.bitTorrentClient.processingTimeHistogram = "simulations/hist_55bin.dat"
 # Thruput calculated whenever 50 packets are transfered or every 100ms
 #**.peer[*].eth.thruputMeterDL.batchSize = 50
 #**.peer[*].eth.thruputMeterUL.batchSize = 50
@@ -75,17 +75,31 @@ seed-set = ${repetition}
 ###
 [Config SimpleTopology]
 extends = Base
-description = "Experiment run with different number of seeders and peers"
-experiment-label = "Varying Number of Peers"
-#measurement-label = "${peers} Peers, ${seederPerc} Seeder proportion"
-measurement-label = "Rate ${rate}, File ${file}"
+description = "Compare file size and upload rate"
+experiment-label = "File size vs data rate study"
+measurement-label = "Upload rate ${rate}, File ${file}"
 #repeat = 10
 
-*.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='${file=small,medium,large}']")
-**.uploadLimiter.bytesSec = ${rate=64KiB, 128KiB,512KiB}
+*.clientController.profile = xmldoc("simulations/BTProfiles.xml","profileList/profile[@name='${file=small,medium,large}']")
+**.contentManager_*.bytesSec = ${rate=64KiB, 128KiB,512KiB}
+**.contentManager_*.burstSize = 50
 constraint = ("$file" == "small" && "$rate" == "64KiB") ||\
              ("$file" == "medium" && "$rate" == "128KiB") ||\
              ("$file" == "large" && "$rate" == "512KiB")
+*.numPeers = ${peers=500}
+*.clientController.seederPercentage = ${seederPerc=0.3}
+
+
+[Config Playing]
+extends = Base
+description = "Playing with the parameters"
+experiment-label = "File size vs data rate study"
+#measurement-label = "Upload rate ${rate}, File ${file}"
+#repeat = 10
+
+*.clientController.profile = xmldoc("simulations/BTProfiles.xml","profileList/profile[@name='${file=test_simple}']")
+**.contentManager_*.bytesSec = ${rate=10KiB, 20KiB, 64KiB, 128KiB,512KiB}
+**.contentManager_*.burstSize = 50
 *.numPeers = ${peers=500}
 *.clientController.seederPercentage = ${seederPerc=0.3}
 
@@ -98,7 +112,7 @@ extends = Base
 description = "Experiment run with only a few peers to test if the simulation is working"
 
 # 2.5MB content
-*.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='test_simple']")
+*.clientController.profile = xmldoc("simulations/BTProfiles.xml","profileList/profile[@name='test_simple']")
 *.clientController.seederPercentage = 0.3
 *.numPeers = ${peers=5,50,500}
 num-rngs = 3
@@ -106,10 +120,11 @@ num-rngs = 3
 **.peer[*].bitTorrentApp.swarmManager.choker*.rng-0 = 1
 **.tracker.**.rng-0 = 2
 **.contentManager*.bytesSec = ${rate=10KiB, 100KiB, 1MiB}
+**.contentManager_*.burstSize = 50
 
 ## Debug flags for printing messages to std::clog
-**.bitTorrentClient.debugFlag = true
+#**.bitTorrentClient.debugFlag = true
 #**.clientController.debugFlag = true
 #**.swarmManager.debugFlag = true
-**.swarmManager.subModulesDebugFlag = true
+#**.swarmManager.subModulesDebugFlag = true
 #**.trackerApp.debugFlag = true
