--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -3,5 +3,5 @@ cmdenv-performance-display = false
 ned-path = /home/pevangelista/Workspaces/workspace-omnetpp/inet-20111118/src:../src:.
 #parallel-simulation = true
 #parsim-debug = false
-tkenv-image-path = ../images
+tkenv-image-path = images
 sim-time-limit = 1day
