Add more configurations.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -28,8 +28,7 @@ seed-set = ${repetition}
 ## The type of the bitTorrentApplication
 *.peer[*].typename = "Peer"
 
-## Factors
-# Exponential arrival, for simple testing
+## Network configuration
 *.clientController.startTime =  10s
 *.clientController.trackerAddress = "tracker"
 *.clientController.trackerPort = 8082
@@ -50,7 +49,6 @@ seed-set = ${repetition}
 #**.peer[*].eth.thruputMeterUL.maxInterval = 100ms
 #**.peer[*].eth.thruputMeterDL.maxInterval = 100ms
 
-
 ## Statistics
 # The eth and arp modules also save statistics
 #**.eth.**.vector-recording = false
@@ -70,48 +68,46 @@ seed-set = ${repetition}
 **.scalar-recording = false
 **.vector-recording = false
 
-###
-### Configure a network for studying variable seeder:leecher ratios
-###
-[Config SimpleTopology]
+[Config Validation]
 extends = Base
-description = "Compare file size and upload rate"
-experiment-label = "File size vs data rate study"
+description = "Validate the simulation comparing with Szydlowski 2011."
+experiment-label = "Validation Study"
 measurement-label = "Upload rate ${rate}, File ${file}"
-#repeat = 10
+replication-label = "${repetition},seed-set=<seedset>"
+repeat = 3
 
-*.clientController.profile = xmldoc("simulations/BTProfiles.xml","profileList/profile[@name='${file=small,medium,large}']")
-**.contentManager_*.bytesSec = ${rate=64KiB, 128KiB,512KiB}
+*.clientController.profile =\
+    xmldoc("simulations/BTProfiles.xml",\
+            "profileList/profile[@name='${file=small,medium,large}']")
+**.contentManager_*.bytesSec = ${rate=35KiB, 92KiB,512KiB}
 **.contentManager_*.burstSize = 50
-constraint = ("$file" == "small" && "$rate" == "64KiB") ||\
-             ("$file" == "medium" && "$rate" == "128KiB") ||\
+constraint = ("$file" == "small" && "$rate" == "35KiB") ||\
+             ("$file" == "medium" && "$rate" == "92KiB") ||\
              ("$file" == "large" && "$rate" == "512KiB")
 *.numPeers = ${peers=500}
 *.clientController.seederPercentage = ${seederPerc=0.3}
 
-
-[Config Playing]
+[Config Performance]
 extends = Base
-description = "Playing with the parameters"
-experiment-label = "File size vs data rate study"
-#measurement-label = "Upload rate ${rate}, File ${file}"
-#repeat = 10
+description = "Studies the simulation performance considering the number of\
+ peers and file size."
+experiment-label = "Performance Study"
+measurement-label = "Peers: $peers, File: $file"
 
-*.clientController.profile = xmldoc("simulations/BTProfiles.xml","profileList/profile[@name='${file=test_simple}']")
-**.contentManager_*.bytesSec = ${rate=10KiB, 20KiB, 64KiB, 128KiB,512KiB}
-**.contentManager_*.burstSize = 50
-*.numPeers = ${peers=500}
+*.clientController.profile =\
+    xmldoc("simulations/BTProfiles.xml",\
+            "profileList/profile[@name='${file=small,medium,large}']")
+*.numPeers = ${peers=100,500,1000}
 *.clientController.seederPercentage = ${seederPerc=0.3}
 
-###
-### Configure a network quick tests
-###
 [Config Test]
 sim-time-limit=10h
 extends = Base
-description = "Experiment run with only a few peers to test if the simulation is working"
-
-# 2.5MB content
+description = "Test the simulation with a small file for fast completion."
+experiment-label = "Simulation Test"
+measurement-label = "Peers: $peers, Rate: $rate"
+ 
+# 10MB content
 *.clientController.profile = xmldoc("simulations/BTProfiles.xml","profileList/profile[@name='test_simple']")
 *.clientController.seederPercentage = 0.3
 *.numPeers = ${peers=5,50,500}
@@ -122,7 +118,9 @@ num-rngs = 3
 **.contentManager*.bytesSec = ${rate=10KiB, 100KiB, 1MiB}
 **.contentManager_*.burstSize = 50
 
-## Debug flags for printing messages to std::clog
+## Debug flags for printing messages to std::err
+# WARNING: Enabling these messages may have a high impact on performance, and
+# the processing of the log messages may take time and resources
 #**.bitTorrentClient.debugFlag = true
 #**.clientController.debugFlag = true
 #**.swarmManager.debugFlag = true
