Major changes to the program, to make the BitTorrentApp to leave the swarm given a certain chance.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -36,7 +36,7 @@ seed-set = ${repetition}
 **.mac.txrate = 1000Mbps # bandwidth
 
 ## Parameters
-**.swarmManager.refreshInterval = 100s
+#**.swarmManager.normalRefreshInterval = 100s
 **.swarmManager.numWant = 20
 **.tracker.tcpApp[0].maxListSize = 50
 **.tracker.tcpApp[0].contents = xmldoc("simulations/BTContents.xml", "contentList")
@@ -85,7 +85,8 @@ constraint = ("$file" == "small" && "$rate" == "35KiB") ||\
              ("$file" == "medium" && "$rate" == "92KiB") ||\
              ("$file" == "large" && "$rate" == "512KiB")
 *.numPeers = ${peers=500}
-*.clientController.seederPercentage = ${seederPerc=0.3}
+*.clientController.numSeeders = 1
+**.swarmManager.remainingSeeders = 0.3 # 30% of the peers will remain after completion
 
 [Config Performance]
 extends = Base
@@ -98,7 +99,8 @@ measurement-label = "Peers: $peers, File: $file"
     xmldoc("simulations/BTProfiles.xml",\
             "profileList/profile[@name='${file=small,medium,large}']")
 *.numPeers = ${peers=100,500,1000}
-*.clientController.seederPercentage = ${seederPerc=0.3}
+*.clientController.numSeeders = 1
+**.swarmManager.remainingSeeders = 0.3 # 30% of the peers will remain after completion
 
 [Config Test]
 sim-time-limit=10h
@@ -109,9 +111,10 @@ measurement-label = "Peers: $peers, Rate: $rate"
  
 # 10MB content
 *.clientController.profile = xmldoc("simulations/BTProfiles.xml","profileList/profile[@name='test_simple']")
-*.clientController.seederPercentage = 0.3
+*.clientController.numSeeders = 1
 *.numPeers = ${peers=5,50,500}
 num-rngs = 3
+**.swarmManager.remainingSeeders = 0.3 # 30% of the peers will remain after completion
 **.peer[*].bitTorrentApp.swarmManager.contentManager*.rng-0 = 0
 **.peer[*].bitTorrentApp.swarmManager.choker*.rng-0 = 1
 **.tracker.**.rng-0 = 2
@@ -121,8 +124,8 @@ num-rngs = 3
 ## Debug flags for printing messages to std::err
 # WARNING: Enabling these messages may have a high impact on performance, and
 # the processing of the log messages may take time and resources
-#**.bitTorrentClient.debugFlag = true
-#**.clientController.debugFlag = true
-#**.swarmManager.debugFlag = true
-#**.swarmManager.subModulesDebugFlag = true
+**.bitTorrentClient.debugFlag = true
+**.bitTorrentClient.subModulesDebugFlag = true
+**.clientController.debugFlag = true
+**.swarmManager.debugFlag = true
 #**.trackerApp.debugFlag = true
