--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -62,7 +62,8 @@ seed-set = ${repetition}
 *.*.scalar-recording = true
 *.*.vector-recording = true
 **.bitTorrentClient.*.scalar-recording = true
-**.swarmManager.contentManager**.vector-recording = true
+**.swarmManager.*.vector-recording = true
+**.contentManager**.vector-recording = true
 
 # disable all recordings that are not explicitly defined
 **.scalar-recording = false
@@ -120,6 +121,10 @@ num-rngs = 3
 **.tracker.**.rng-0 = 2
 **.contentManager*.bytesSec = ${rate=10KiB, 100KiB, 1MiB}
 **.contentManager_*.burstSize = 50
+
+# disable all recordings that are not explicitly defined
+**.scalar-recording = false
+**.vector-recording = false
 
 ## Debug flags for printing messages to std::err
 # WARNING: Enabling these messages may have a high impact on performance, and
