Correct the running script to check for environment variables and to print output.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -39,10 +39,10 @@ seed-set = ${repetition}
 #**.swarmManager.normalRefreshInterval = 100s
 **.swarmManager.numWant = 20
 **.tracker.tcpApp[0].maxListSize = 50
-**.tracker.tcpApp[0].contents = xmldoc("simulations/BTContents.xml", "contentList")
+**.tracker.tcpApp[0].contents = xmldoc("../simulations/BTContents.xml", "contentList")
 
 # processing time configured with the histogram with 55 bins
-*.peer[*].bitTorrentApp.bitTorrentClient.processingTimeHistogram = "simulations/hist_55bin.dat"
+*.peer[*].bitTorrentApp.bitTorrentClient.processingTimeHistogram = "../simulations/hist_55bin.dat"
 # Thruput calculated whenever 50 packets are transfered or every 100ms
 #**.peer[*].eth.thruputMeterDL.batchSize = 50
 #**.peer[*].eth.thruputMeterUL.batchSize = 50
@@ -78,7 +78,7 @@ replication-label = "${repetition},seed-set=<seedset>"
 repeat = 3
 
 *.clientController.profile =\
-    xmldoc("simulations/BTProfiles.xml",\
+    xmldoc("../simulations/BTProfiles.xml",\
             "profileList/profile[@name='${file=small,medium,large}']")
 **.contentManager_*.bytesSec = ${rate=35KiB, 92KiB,512KiB}
 **.contentManager_*.burstSize = 50
@@ -97,7 +97,7 @@ experiment-label = "Performance Study"
 measurement-label = "Peers: $peers, File: $file"
 
 *.clientController.profile =\
-    xmldoc("simulations/BTProfiles.xml",\
+    xmldoc("../simulations/BTProfiles.xml",\
             "profileList/profile[@name='${file=small,medium,large}']")
 *.numPeers = ${peers=100,500,1000}
 *.clientController.numSeeders = 1
@@ -111,7 +111,7 @@ experiment-label = "Simulation Test"
 measurement-label = "Peers: $peers, Rate: $rate"
  
 # 10MB content
-*.clientController.profile = xmldoc("simulations/BTProfiles.xml","profileList/profile[@name='test_simple']")
+*.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='test_simple']")
 *.clientController.numSeeders = 1
 *.numPeers = ${peers=5,50,500}
 num-rngs = 3
