--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -58,11 +58,9 @@ seed-set = ${repetition}
 #**.arp.**.vector-recording = false
 #**.arp.**.scalar-recording = false
 # enable recordings by module
-*.clientController.*.vector-recording = true
 *.*.scalar-recording = true
 *.*.vector-recording = true
 **.bitTorrentClient.*.scalar-recording = true
-**.swarmManager.*.vector-recording = true
 **.contentManager**.vector-recording = true
 
 # disable all recordings that are not explicitly defined
@@ -123,8 +121,8 @@ num-rngs = 3
 **.contentManager_*.burstSize = 50
 
 # disable all recordings that are not explicitly defined
-**.scalar-recording = false
-**.vector-recording = false
+#**.scalar-recording = false
+#**.vector-recording = false
 
 ## Debug flags for printing messages to std::err
 # WARNING: Enabling these messages may have a high impact on performance, and
