Store statistics about message counts.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -61,7 +61,7 @@ seed-set = ${repetition}
 *.*.scalar-recording = true
 *.*.vector-recording = true
 **.bitTorrentClient.*.scalar-recording = true
-**.contentManager**.vector-recording = true
+#**.contentManager**.vector-recording = true
 
 # disable all recordings that are not explicitly defined
 **.scalar-recording = false
