The complement of 'remainingSeeder' was being used (1 - p when it should've been p).

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -71,21 +71,23 @@ seed-set = ${repetition}
 extends = Base
 description = "Validate the simulation comparing with Szydlowski 2011."
 experiment-label = "Validation Study"
-measurement-label = "Upload rate ${rate}, File ${file}"
-replication-label = "${repetition},seed-set=<seedset>"
+measurement-label = "Upload rate ${rate}, File ${file}, Seeder percentage ${seeder}"
+replication-label = "${repetition}"
 repeat = 10
+
+# 70% or 30% of the peers will remain after completion
+**.swarmManager.remainingSeeders = ${seeder=0.7,0.3}
 
 *.clientController.profile =\
     xmldoc("../simulations/BTProfiles.xml",\
             "profileList/profile[@name='${file=small,medium,large}']")
 **.contentManager_*.bytesSec = ${rate=35KiB, 92KiB,512KiB}
 **.contentManager_*.burstSize = 50
+*.numPeers = ${peers=500}
 constraint = ("$file" == "small" && "$rate" == "35KiB") ||\
              ("$file" == "medium" && "$rate" == "92KiB") ||\
              ("$file" == "large" && "$rate" == "512KiB")
-*.numPeers = ${peers=500}
 *.clientController.numSeeders = 1
-**.swarmManager.remainingSeeders = 0.3 # 30% of the peers will remain after completion
 
 [Config Performance]
 extends = Base
@@ -113,12 +115,13 @@ measurement-label = "Peers: $peers, Rate: $rate"
 *.clientController.numSeeders = 1
 *.numPeers = ${peers=5,50,500}
 num-rngs = 3
-**.swarmManager.remainingSeeders = 0.3 # 30% of the peers will remain after completion
 **.peer[*].bitTorrentApp.swarmManager.contentManager*.rng-0 = 0
 **.peer[*].bitTorrentApp.swarmManager.choker*.rng-0 = 1
 **.tracker.**.rng-0 = 2
 **.contentManager*.bytesSec = ${rate=10KiB, 100KiB, 1MiB}
 **.contentManager_*.burstSize = 50
+# 70% or 30% of the peers will remain after completion
+**.swarmManager.remainingSeeders = 0.3
 
 # disable all recordings that are not explicitly defined
 #**.scalar-recording = false
