Change the default number of active and passive connections. Create a study for the number of connections.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -67,6 +67,48 @@ seed-set = ${repetition}
 **.scalar-recording = false
 **.vector-recording = false
 
+[Config Connections]
+extends = Base
+description = "Test the number of active and passive connections"
+experiment-label = "Active vs Passive Connections"
+measurement-label = ""
+replication-label = "${repetition}"
+repeat = 1
+
+**.swarmManager.remainingSeeders = 0.3
+**.bitTorrentClient.numberOfActivePeers = ${active=3,5,25,50}
+**.bitTorrentClient.numberOfPassivePeers = ${passive=2,5,25,50}
+constraint = ($active == 3 && $passive==2) ||\
+             ($active == $passive)
+
+*.clientController.profile =\
+    xmldoc("../simulations/BTProfiles.xml",\
+            "profileList/profile[@name='small']")
+**.contentManager_*.bytesSec = 35KiB
+**.contentManager_*.burstSize = 50
+*.numPeers = 500
+*.clientController.numSeeders = 1
+
+[Config ValidationSmall]
+extends = Base
+description = "Validate the simulation comparing with Szydlowski 2011."
+experiment-label = "Validation Study small file"
+measurement-label = "Upload rate 35, File small, Seeder percentage 0.3"
+replication-label = "${repetition}"
+repeat = 1
+
+**.swarmManager.remainingSeeders = 0.3
+**.bitTorrentClient.numberOfActivePeers = 5
+**.bitTorrentClient.numberOfPassivePeers = 5
+
+*.clientController.profile =\
+    xmldoc("../simulations/BTProfiles.xml",\
+            "profileList/profile[@name='small']")
+**.contentManager_*.bytesSec = 35KiB
+**.contentManager_*.burstSize = 50
+*.numPeers = 500
+*.clientController.numSeeders = 1
+
 [Config Validation]
 extends = Base
 description = "Validate the simulation comparing with Szydlowski 2011."
@@ -88,20 +130,6 @@ constraint = ("$file" == "small" && "$rate" == "35KiB") ||\
              ("$file" == "medium" && "$rate" == "92KiB") ||\
              ("$file" == "large" && "$rate" == "512KiB")
 *.clientController.numSeeders = 1
-
-[Config Performance]
-extends = Base
-description = "Studies the simulation performance considering the number of\
- peers and file size."
-experiment-label = "Performance Study"
-measurement-label = "Peers: $peers, File: $file"
-
-*.clientController.profile =\
-    xmldoc("../simulations/BTProfiles.xml",\
-            "profileList/profile[@name='${file=small,medium,large}']")
-*.numPeers = ${peers=100,500,1000}
-*.clientController.numSeeders = 1
-**.swarmManager.remainingSeeders = 0.3 # 30% of the peers will remain after completion
 
 [Config Test]
 sim-time-limit=10h
