Refine the experiments and add more comments to the file.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -67,6 +67,10 @@ seed-set = ${repetition}
 **.scalar-recording = false
 **.vector-recording = false
 
+###
+### Testing how the number of active and passive connections affect
+### the simulation
+###
 [Config Connections]
 extends = Base
 description = "Test the number of active and passive connections"
@@ -89,6 +93,14 @@ constraint = ($active == 3 && $passive==2) ||\
 *.numPeers = 500
 *.clientController.numSeeders = 1
 
+**.bitTorrentClient.debugFlag = true
+**.bitTorrentClient.subModulesDebugFlag = true
+**.clientController.debugFlag = true
+**.swarmManager.debugFlag = true
+
+###
+### Validation using only the small file size
+###
 [Config ValidationSmall]
 extends = Base
 description = "Validate the simulation comparing with Szydlowski 2011."
@@ -109,28 +121,40 @@ repeat = 1
 *.numPeers = 500
 *.clientController.numSeeders = 1
 
+###
+### Validation changing the file size, the upload rate and the number of connections
+###
 [Config Validation]
 extends = Base
 description = "Validate the simulation comparing with Szydlowski 2011."
 experiment-label = "Validation Study"
-measurement-label = "Upload rate ${rate}, File ${file}, Seeder percentage ${seeder}"
+measurement-label = "Upload rate ${rate}, File ${file}, Connections A(${active})-P(${passive})"
 replication-label = "${repetition}"
-repeat = 10
+repeat = 3
 
-# 70% or 30% of the peers will remain after completion
-**.swarmManager.remainingSeeders = ${seeder=0.7,0.3}
+# 30% of the peers will remain after completion
+**.swarmManager.remainingSeeders = 0.3
 
 *.clientController.profile =\
     xmldoc("../simulations/BTProfiles.xml",\
             "profileList/profile[@name='${file=small,medium,large}']")
 **.contentManager_*.bytesSec = ${rate=35KiB, 92KiB,512KiB}
 **.contentManager_*.burstSize = 50
-*.numPeers = ${peers=500}
-constraint = ("$file" == "small" && "$rate" == "35KiB") ||\
+
+**.bitTorrentClient.numberOfActivePeers = ${active=3,5}
+**.bitTorrentClient.numberOfPassivePeers = ${passive=2,5}
+
+*.numPeers = 500
+constraint = (("$file" == "small" && "$rate" == "35KiB") ||\
              ("$file" == "medium" && "$rate" == "92KiB") ||\
-             ("$file" == "large" && "$rate" == "512KiB")
+             ("$file" == "large" && "$rate" == "512KiB")) &&\
+             (($active == 3 && $passive == 2) || ($active == $passive))
 *.clientController.numSeeders = 1
 
+###
+### Experiment for testing the simulation. The file size is small so that
+### the simulation ends quickly
+###
 [Config Test]
 sim-time-limit=10h
 extends = Base
@@ -149,7 +173,11 @@ num-rngs = 3
 **.contentManager*.bytesSec = ${rate=10KiB, 100KiB, 1MiB}
 **.contentManager_*.burstSize = 50
 # 70% or 30% of the peers will remain after completion
+**.bitTorrentClient.numberOfActivePeers = ${active=3,5,25,50}
+**.bitTorrentClient.numberOfPassivePeers = ${passive=2,5,25,50}
 **.swarmManager.remainingSeeders = 0.3
+
+constraint = (($active == $passive) || ($active == 3 && $passive == 2))
 
 # disable all recordings that are not explicitly defined
 #**.scalar-recording = false
